bluec-tests/tests/invalid/functions/defn_must_have_param_names.c
int calc(int, int) {
    return 0;
}

int main(void) {
    return 0;
}